# python-terraform-plugin

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: pythonpackage.yml
terraform/: datastructures.py  diagnostics.py  diffs.py  field_readers.py  field_writers.py  fields.py  grpc_controller.py  grpc_stdio.py  plugin.py  resources.py  schema.py  schemas.py  settings.py  unknowns.py  utils.py
terraform/protos/: grpc_controller_grpc.py  grpc_controller_pb2.py  grpc_stdio.proto  grpc_stdio_grpc.py  grpc_stdio_pb2.py  tfplugin5_1.proto  tfplugin5_1_grpc.py  tfplugin5_1_pb2.py
tests/: test_datastructures.py  test_diagnostics.py  test_field_readers.py  test_field_writers.py  test_grpc_controller.py  test_plugin.py  test_resources.py  test_schema.py  test_schema_diffs.py  test_schemas.py  test_unknowns.py
