[tool.poetry]
name = "terraform-plugin"
version = "0.1.0"
description = "A framework to develop Terraform Plugins (Providers and Provisioners) in Python"
authors = ["Jian Yuan Lee <jianyuan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
grpclib = "^0.3.1"
protobuf = "^3.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
grpcio-tools = "^1.27.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
