[tool.poetry]
name = "terraform-plugin"
version = "0.1.0"
description = "A framework to develop Terraform Plugins (Providers and Provisioners) in Python"
authors = ["Jian Yuan Lee <jianyuan@gmail.com>"]
license = "MIT"
packages = [
    {include = "terraform"},
]

[tool.poetry.dependencies]
python = "^3.8"
grpclib = {version = "^0.3.3-rc.1", allow-prereleases = true}
protobuf = "^3.12.2"
cryptography = "^2.9.2"
marshmallow = "^3.6.1"
msgpack = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"
grpcio-tools = "^1.30.0"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
